# Redux

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.user.658fd71  LICENSE  README.md  Redux_en_IN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: Linux-release.yml  codeql-analysis.yml  macOS-release.yml  ubuntu-release.yml  win-release.yml  win-release32.yml  win-release64.yml
Redux-qt/: CMakeLists.txt  Redux-qt_en_IN.ts  mainwindow.ui
build-Redux-qt-Desktop-Debug/: CMakeCache.txt  Makefile  Redux-qt  cmake_install.cmake
build-Redux-qt-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-b7cabcffedfe021a663d.json  cmakeFiles-v1-9758e940de185676a1aa.json  codemodel-v2-7193ecefff9155c37571.json  index-2020-12-01T12-48-52-0839.json  target-Redux-qt-Debug-c98ecaf7550b88a3f4cf.json  target-Redux-qt_autogen-Debug-a78179947eeb9566b288.json
build-Redux-qt-Desktop-Debug/Redux-qt_autogen/: moc_predefs.h
build-Redux-qt-Desktop-Debug/Redux-qt_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-Redux-qt-Desktop-Debug/Redux-qt_autogen/include/: ui_mainwindow.h
build-Redux-qt-Desktop-Release/: CMakeCache.txt  Makefile  Redux-qt  cmake_install.cmake
build-Redux-qt-Desktop-Release/.cmake/api/v1/reply/: cache-v2-f8b59a103451e0ea0fb6.json  cmakeFiles-v1-e4ae6fb5fd5947eec1bb.json  codemodel-v2-a62c10339c76e94942fe.json  index-2020-12-01T13-04-31-0378.json  target-Redux-qt-Release-bf50471ac5c8ee791c9c.json  target-Redux-qt_autogen-Release-6bc7940fe939858cc640.json
build-Redux-qt-Desktop-Release/Redux-qt_autogen/: moc_predefs.h
build-Redux-qt-Desktop-Release/Redux-qt_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-Redux-qt-Desktop-Release/Redux-qt_autogen/include/: ui_mainwindow.h
include/: account.h  after_signin_services.h  credential.h  cryptofile.h  feature.h  file.h  filecrypt.h  input.h  input_util.h  login.h  login_signup.h  logout.h  menu.h  returning_user.h  returning_user_services.h  services.h  signup.h  startup_services.h  str.h  user.h  utils.h
inlucde/: input_util.h  login_signup.h
src/: CMakeLists.txt  account.cpp  after_signin_services.cpp  app.cpp  do_not_open  feature.cpp  file.cpp  input.cpp  login.cpp  logout.cpp  returning_user_services.cpp  signup.cpp  startup_services.cpp  utils.cpp
tests/: p0_regressions.sh
